--- a/ICP.vcxproj.filters
+++ b/ICP.vcxproj.filters
@@ -19,4 +19,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resource\lightbulb.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\HSV-MAP.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
