--- a/ICP.vcxproj
+++ b/ICP.vcxproj
@@ -148,6 +148,10 @@
   <ItemGroup>
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resource\HSV-MAP.png" />
+    <Image Include="Resource\lightbulb.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
