--- a/ICP.vcxproj
+++ b/ICP.vcxproj
@@ -147,10 +147,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
+    <None Include="resources\video.mkv" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="resources\red_cup.jpg" />
     <Image Include="Resource\HSV-MAP.png" />
     <Image Include="Resource\lightbulb.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="resources\haarcascade_frontalface_default.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
