--- a/ICP.vcxproj
+++ b/ICP.vcxproj
@@ -156,11 +156,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp" />
+    <ClCompile Include="src\codec.cpp" />
+    <ClCompile Include="src\FaceRecongnition.cpp" />
     <ClCompile Include="src\gl_err_callback.cpp" />
+    <ClCompile Include="src\imageProcessing.cpp" />
+    <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\App.h" />
+    <ClInclude Include="src\codec.h" />
+    <ClInclude Include="src\FaceRecognition.h" />
     <ClInclude Include="src\gl_err_callback.h" />
+    <ClInclude Include="src\imageProcessing.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
