--- a/ICP.vcxproj
+++ b/ICP.vcxproj
@@ -150,6 +150,9 @@
     <None Include="resources\Shaders\basic_core.vert" />
     <None Include="resources\Shaders\basic_uniform.frag" />
     <None Include="resources\Shaders\basic_uniform.vert" />
+    <None Include="resources\Shaders\directional.frag" />
+    <None Include="resources\Shaders\directional.vert" />
+    <None Include="resources\Shaders\parametrized,many,COMPAT-OLD.frag" />
     <None Include="resources\Shaders\tex.frag" />
     <None Include="resources\Shaders\tex.vert" />
     <None Include="resources\video.mkv" />
